fix text-overlap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3850,7 +3850,7 @@ input, select, textarea {
   font-weight: bold;
   top: .1em;
   display: block;
-  font-size: 1.25rem;
+  font-size: 1.1rem;
     /* color: #1f78e6; */
 		color: #935d8c;
 }
